Agregué imágenes en el srcet del section..

--- a/index.html
+++ b/index.html
@@ -17,35 +17,26 @@
     </header>
     <section class="septionGuests"><span class="septionGuests__span">Our guest</span>
       <div class="septionGuests__container">
-        <article class="septionGuests__article1"><span>Lorem.</span><img src="images/man.png" alt="" srcset=""/>
+        <article class="septionGuests__article1"><span>Lorem.</span><img alt="guest man" srcset="images/man-small.png 200w, images/man.png 429w" sizes="(min-width=75rem) 8vw, 100vw" src="images/man.png"/>
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
-        <article class="septionGuests__article1--2"><span>Lorem.</span><img src="images/woman.png" alt="" srcset=""/>
+        <article class="septionGuests__article1--2"><span>Lorem.</span><img srcset="images/woman-small.png 200w, images/woman.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="" src="images/woman.png"/>
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
-        <article class="septionGuests__article1--3"><span>Lorem.</span><img src="images/woman1.png" alt="" srcset=""/>
+        <article class="septionGuests__article1--3"><span>Lorem.</span><img srcset="images/woman1-small.png 200w, images/woman1.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="" src="imges/woman-1.png"/>
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
       </div>
     </section>
     <aside class="aside">
-      <article class="aside__container">
-        <div class="aside__information">
-          <div></div>
-          <p>17 / 18<br/>march 2020</p>
-        </div>
-        <div class="aside__information--2">
-          <div></div>
-          <p>from 08 am<br/>to 05 pm</p>
-        </div>
-        <div class="aside__information--3">
-          <div></div>
-          <p>2478<br/>counts len      </p>
-        </div>
-      </article><small> <b>More info on:                </b><a class="aside__visitUrl" href="www.yourwebsite.com">www.yourwebsite.com</a></small>
+      <ul class="aside__ul">
+        <li class="aside__li">17 / 18<br/>march 2020</li>
+        <li class="aside__li--2">from 08 am<br/>to 05 pm</li>
+        <li class="aside__li--3">2478<br/>counts len					 </li>
+      </ul><small> <b>More info on:                </b><a class="aside__visitUrl" href="www.yourwebsite.com">www.yourwebsite.com</a></small>
     </aside>
     <footer class="footer">
       <article class="footer__container">
