--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <li class="aside__li">17 / 18<br/>march 2020</li>
         <li class="aside__li--2">from 08 am<br/>to 05 pm</li>
         <li class="aside__li--3">2478<br/>counts len					 </li>
-      </ul><small> <b>More info on:                </b><a class="aside__visitUrl" href="www.yourwebsite.com">www.yourwebsite.com</a></small>
+      </ul><small> <b>More info on:                </b><a class="aside__visitUrl" href="#">www.yourwebsite.com</a></small>
     </aside>
     <footer class="footer">
       <article class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__li">/conference</li>
-          <li class="footer__li--2">/conference</li>
-          <li class="footer__li--3">/conference</li>
-          <li class="footer__li--4">/conference</li>
-        </ul><span class="footer__span">sponsored by Learning</span>
+          <li class="footer__li"><a href="#">/conference</a></li>
+          <li class="footer__li--2"><a href="#">/conference</a></li>
+          <li class="footer__li--3"><a href="#">/conference</a></li>
+          <li class="footer__li--4"><a href="#">/conference</a></li>
+        </ul><em class="footer__span"><a href="http://www.freepik.com">Designed by Freepik</a></em>
       </article>
     </footer>
   </body>
