--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="footer__li--2"><a href="#">/conference</a></li>
           <li class="footer__li--3"><a href="#">/conference</a></li>
           <li class="footer__li--4"><a href="#">/conference</a></li>
-        </ul><em class="footer__span"><a href="http://www.freepik.com">Designed by Freepik</a></em>
+        </ul><em class="footer__span"><a href="http://www.freepik.com" target="_blank">Designed by Freepik</a></em>
       </article>
     </footer>
   </body>
