--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
-        <article class="septionGuests__article1--2"><span>Lorem.</span><img srcset="images/woman-small.png 200w, images/woman.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="" src="images/woman.png"/>
+        <article class="septionGuests__article1--2"><span>Lorem.</span><img srcset="images/woman-small.png 200w, images/woman.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="mujer" src="images/woman.png"/>
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
-        <article class="septionGuests__article1--3"><span>Lorem.</span><img srcset="images/woman1-small.png 200w, images/woman1.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="" src="imges/woman-1.png"/>
+        <article class="septionGuests__article1--3"><span>Lorem.</span><img srcset="images/woman1-small.png 200w, images/woman1.png 429w" sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw" alt="mujer" src="imges/woman-1.png"/>
           <h4>Lorem, ipsum dolor.</h4>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </article>
@@ -41,10 +41,10 @@
     <footer class="footer">
       <article class="footer__container">
         <ul class="footer__ul">
-          <li class="footer__li"><a href="#">/conference</a></li>
-          <li class="footer__li--2"><a href="#">/conference</a></li>
-          <li class="footer__li--3"><a href="#">/conference</a></li>
-          <li class="footer__li--4"><a href="#">/conference</a></li>
+          <li class="footer__li"><a class="link fab fa-facebook-f" href="#">/conference</a></li>
+          <li class="footer__li"><a class="link fab fa-twitter" href="#">/conference</a></li>
+          <li class="footer__li"><a class="link fab fa-instagram" href="#">/conference</a></li>
+          <li class="footer__li"><a class="link fab fa-whatsapp" href="#">/conference</a></li>
         </ul><em class="footer__span"><a href="http://www.freepik.com" target="_blank">Designed by Freepik</a></em>
       </article>
     </footer>
